--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <p class = "header__subtitle"> Какие совеременные и эффективные подходы к обучению вы можете использовать в своей жизни?
           <a href = "#" class="link"> Узнать </a>
         </p>
-        <img class = "header__main-illustration" src = "./images/header-image.png" alt = "main-illustration">
+        <img class = "header__main-illustration" src = "./images/header-image.png" alt = "картина-опять-двойка">
       <div class="header__square-pic"></div>
     </header>
     <main class = "content">
@@ -155,15 +155,15 @@
             <ul class = "footer__column-links">
               <li>
                 <a href = "http://www.facebook.com" target = '_blank'>
-                  <img class = "footer__social-icons" src = 'images/youtube-icon.svg' alt = 'YouTube'>YouTube</a>
+                  <img class = "footer__social-icons" src = "images/youtube-icon.svg" alt="Ютуб-лого">YouTube</a>
               </li>
               <li>
                 <a href = "http://www.vk.com" target='_blank'>
-                  <img class = "footer__social-icons" src = 'images/vk_color_white.svg' alt = 'vk.com'>ВКонтакте</a>
+                  <img class = "footer__social-icons" src = 'images/vk_color_white.svg' alt="ВК-лого">ВКонтакте</a>
               </li>
               <li>
                 <a href = "http://www.tiktok.com" target='_blank'>
-                  <img class = "footer__social-icons" src = 'images/tiktok-icon.svg' alt = 'TikTok'>TikTok</a>
+                  <img class = "footer__social-icons" src = 'images/tiktok-icon.svg' alt="ТикТок-лого">TikTok</a>
               </li>
             </ul>
           </div>
