--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class = "logo logo_place_header"></div>
         <h1 class = "header__title"> Научиться учиться </h1>
         <p class = "header__subtitle"> Какие совеременные и эффективные подходы к обучению вы можете использовать в своей жизни?
-          <a href = "#" class="link"> Узнать </a>
+          <a href = "#" class="header__link"> Узнать </a>
         </p>
         <img class = "header__main-illustration" src = "./images/header-image.png" alt = "картина-опять-двойка">
       <div class="header__square-pic"></div>
@@ -44,8 +44,8 @@
           </div>
       </section>
       <section class = "digits">
-        <div class = "section-title"> Цифры и факты </div>
-        <div class = "section-subtitle"> Про учебу и мозг</div>
+        <h2 class = "section-title"> Цифры и факты </h2>
+        <h3 class = "section-subtitle"> Про учебу и мозг</h3>
         <div class = "table digits__table">
             <div class="table__cell">
                 <h3 class = 'table__heading'> 86 миллиардов </h3>
@@ -83,86 +83,86 @@
             </div>
         </div>
     </section>
-    <section class="feinman">
-      <h2 class = "feinmann__title"> Метод Фейнмана </h2>
-      <p class = "feinmann__subtitle"> Выучить и не забыть. </p>
-      <a class = "link feinmann__link " href="#"> Подробнее </a>
+    <section class="feynman">
+      <h2 class = "feynman__title"> Метод Фейнмана </h2>
+      <p class = "feynman__subtitle"> Выучить и не забыть. </p>
+      <a class = "link feynman__link " href="#"> Подробнее </a>
     </section>
     <section class="kaufman">
-      <div class = "section-title_theme_dark"> Принципы обучения </div>
-      <div class = "section-subtitle_theme_dark"> от Джоша Кауфмана </div>
-      <div class = "table table_theme_dark">
+      <h2 class = "kaufman__section-title_dark"> Принципы обучения </h2>
+      <h3 class = "Kaufman__section-subtitle_dark"> от Джоша Кауфмана </h3>
+      <ul class = "table table_theme_dark">
           <div class = "table__cell table__cell_theme_dark">
-              <h3 class ='table__heading'>1</h3>
-              <p class = "table__text"> Выберите привлекательный проект. </p>
+              <h3 class ='table__heading_theme_dark'>1</h3>
+              <p class = "table__text_theme_dark"> Выберите привлекательный проект. </p>
           </div>
           <div class = "table__cell table__cell_theme_dark">
-              <h3 class = 'table__heading'>2</h3>
-              <p class = " table__text"> Сосредоточьтесь на каком-то одном навыке. </p>
+              <h3 class = 'table__heading_theme_dark'>2</h3>
+              <p class = " table__text_theme_dark"> Сосредоточьтесь на каком-то одном навыке. </p>
           </div>
           <div class = "table__cell table__cell_theme_dark">
-              <h3 class = 'table__heading'>3</h3>
-              <p class = "table__text"> Определите целевой уровень мастерства. </p>
+              <h3 class = 'table__heading_theme_dark'>3</h3>
+              <p class = "table__text_theme_dark"> Определите целевой уровень мастерства. </p>
           </div>
           <div class = "table__cell table__cell_theme_dark">
-              <h3 class = 'table__heading'>4</h3>
-              <p class = "table__text"> Разбейте навык на элементы. </p>
+              <h3 class = 'table__heading_theme_dark'>4</h3>
+              <p class = "table__text_theme_dark"> Разбейте навык на элементы. </p>
           </div>
           <div class = "table__cell table__cell_theme_dark">
-              <h3 class = 'table__heading'>5</h3>
-              <p class = "table__text"> Приготовьте всё необходимое для занятий. </p>
+              <h3 class = 'table__heading_theme_dark'>5</h3>
+              <p class = "table__text_theme_dark"> Приготовьте всё необходимое для занятий. </p>
           </div>
           <div class = "table__cell table__cell_theme_dark">
-              <h3 class = 'table__heading'>6</h3>
-              <p class = "table__text"> Устраните препятствия для занятий. </p>
+              <h3 class = 'table__heading_theme_dark'>6</h3>
+              <p class = "table__text_theme_dark"> Устраните препятствия для занятий. </p>
           </div>
           <div class = "table__cell table__cell_theme_dark">
-              <h3 class = 'table__heading'>7</h3>
-              <p class = "table__text"> Выделите специальное время для занятий. </p>
+              <h3 class = 'table__heading_theme_dark'>7</h3>
+              <p class = "table__text_theme_dark"> Выделите специальное время для занятий. </p>
           </div>
           <div class="table__cell table__cell_theme_dark">
-              <h3 class='table__heading'>8</h3>
-              <p class="table__text"> Создайте быстрые петли обратной связи. </p>
+              <h3 class='table__heading_theme_dark'>8</h3>
+              <p class="table__text_theme_dark"> Создайте быстрые петли обратной связи. </p>
           </div>
           <div class="table__cell table__cell_theme_dark">
-              <h3 class='table__heading'>9</h3>
-              <p class="table__text"> Занимайтесь по расписанию, короткими интенсивным интервалами. </p>
+              <h3 class='table__heading_theme_dark'>9</h3>
+              <p class="table__text_theme_dark"> Занимайтесь по расписанию, короткими интенсивным интервалами. </p>
           </div>
           <div class="table__cell table__cell_theme_dark">
-              <h3 class='table__heading'>10</h3>
-              <p class="table__text"> Уделяйте внимание количеству и скорости. </p>
+              <h3 class='table__heading_theme_dark'>10</h3>
+              <p class="table__text_theme_dark"> Уделяйте внимание количеству и скорости. </p>
           </div>
-      </div>
+        </ul>
       <div class = "kaufman__triangle"></div>
     </section>
     </main>
     <footer class = "footer">
       <div class = "footer__columns">
-          <div class = "footer__column footer__column_content-copyright">
+          <div class = "footer__column footer__column_content_copyright">
               <div class = "logo logo_place_footer"></div>
-              <div class = "footer__author">&copy 2023, Mark Kazantsev</div>
+              <p class = "footer__author">&copy; 2023, Mark Kazantsev</p>
           </div>
-          <div class = "footer__column footer__column_content-info">
-              <h3 class = "footer__column-heading"> О Практикуме </h3>
-              <ul class = "footer__column-links">
-                  <li> <a href = "#">Главная</a></li>
-                  <li> <a href = "#">Концепция</a></li>
-                  <li> <a href = "#">Наставники</a></li>
-              </ul>
-          </div>
-          <div class = "footer__column footer__column_content-social">
+          <nav class = "footer__column footer__column_content_info">
+            <h3 class = "footer__column-heading"> О Практикуме </h3>
+            <ul class = "footer__column-links">
+              <li> <a href = "#" class = "footer__column-link">Главная</a></li>
+              <li> <a href = "#" class = "footer__column-link">Концепция</a></li>
+              <li> <a href = "#" class = "footer__column-link">Наставники</a></li>
+            </ul>
+          </nav>
+          <div class = "footer__column footer__column_content_social">
             <h3 class = "footer__column-heading">Соцсети</h3>
             <ul class = "footer__column-links">
               <li>
-                <a href = "http://www.facebook.com" target = '_blank'>
+                <a href = "http://www.facebook.com" target = '_blank' class = "footer__column-link">
                   <img class = "footer__social-icons" src = "images/youtube-icon.svg" alt="Ютуб-лого">YouTube</a>
               </li>
               <li>
-                <a href = "http://www.vk.com" target='_blank'>
+                <a href = "http://www.vk.com" target='_blank' class = "footer__column-link">
                   <img class = "footer__social-icons" src = 'images/vk_color_white.svg' alt="ВК-лого">ВКонтакте</a>
               </li>
               <li>
-                <a href = "http://www.tiktok.com" target='_blank'>
+                <a href = "http://www.tiktok.com" target='_blank' class = "footer__column-link">
                   <img class = "footer__social-icons" src = 'images/tiktok-icon.svg' alt="ТикТок-лого">TikTok</a>
               </li>
             </ul>
