--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <main class="content">
       <section class="description">
         <div class="two-columns">
-          <p class="two-columns__brief">Главные проблемы в обучении</p>
+          <h3 class="two-columns__brief">Главные проблемы в обучении</h3>
           <div class='two-columns__main-text'>
             <p class="two-columns__paragraph">
               Ни в школе,ни в институте нас не учат тому, как правильно изучать материал.
@@ -95,46 +95,46 @@
         <h2 class="kaufman__section-title_dark">Принципы обучения</h2>
         <h3 class="Kaufman__section-subtitle_dark">от Джоша Кауфмана</h3>
         <ul class="table table_theme_dark">
-          <div class="table__cell table__cell_theme_dark">
+          <li class="table__cell table__cell_theme_dark">
             <h3 class='table__heading_theme_dark'>1</h3>
             <p class="table__text_theme_dark">Выберите привлекательный проект.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
+          </li>
+          <li class="table__cell table__cell_theme_dark">
             <h3 class='table__heading_theme_dark'>2</h3>
             <p class=" table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
+          </li>
+          <li class="table__cell table__cell_theme_dark">
             <h3 class='table__heading_theme_dark'>3</h3>
             <p class="table__text_theme_dark">Определите целевой уровень мастерства.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
+          </li>
+          <li class="table__cell table__cell_theme_dark">
             <h3 class='table__heading_theme_dark'>4</h3>
             <p class="table__text_theme_dark">Разбейте навык на элементы.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
+          </li>
+          <li class="table__cell table__cell_theme_dark">
             <h3 class='table__heading_theme_dark'>5</h3>
             <p class="table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
+          </li>
+          <li class="table__cell table__cell_theme_dark">
             <h3 class='table__heading_theme_dark'>6</h3>
             <p class="table__text_theme_dark">Устраните препятствия для занятий.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
+          </li>
+          <li class="table__cell table__cell_theme_dark">
             <h3 class='table__heading_theme_dark'>7</h3>
             <p class="table__text_theme_dark">Выделите специальное время для занятий.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
+          </li>
+          <li class="table__cell table__cell_theme_dark">
             <h3 class='table__heading_theme_dark'>8</h3>
             <p class="table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
+          </li>
+          <li class="table__cell table__cell_theme_dark">
             <h3 class='table__heading_theme_dark'>9</h3>
             <p class="table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивным интервалами.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
+          </li>
+          <li class="table__cell table__cell_theme_dark">
             <h3 class='table__heading_theme_dark'>10</h3>
             <p class="table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
-          </div>
+          </li>
         </ul>
         <div class="kaufman__triangle"></div>
       </section>
