--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <main class="content">
       <section class="description">
         <div class="two-columns">
-          <h3 class="two-columns__brief">Главные проблемы в обучении</h3>
+          <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class='two-columns__main-text'>
             <p class="two-columns__paragraph">
               Ни в школе,ни в институте нас не учат тому, как правильно изучать материал.
@@ -51,38 +51,38 @@
         <h3 class="section-subtitle">Про учебу и мозг</h3>
         <div class="table digits__table">
           <div class="table__cell">
-            <h3 class='table__heading'>86 миллиардов</h3>
+            <h4 class='table__heading'>86 миллиардов</h4>
             <p class="table__text"> Число нейронов в мозге человека.</p>
           </div>
           <div class="table__cell">
-            <h3 class='table__heading'>2.1 миллиарда</h3>
+            <h4 class='table__heading'>2.1 миллиарда</h4>
             <p class="table__text">Число нуждающихся в повышении квалификации.</p>
             <p class="table__text"> Всемирный Банк, 2017</p>
           </div>
           <div class="table__cell">
-            <h3 class='table__heading'>1000 террабайт</h3>
+            <h4 class='table__heading'>1000 террабайт</h4>
             <p class="table__text">Объем памяти человека.</p>
           </div>
           <div class="table__cell">
-            <h3 class='table__heading'>500 триллионов</h3>
+            <h4 class='table__heading'>500 триллионов</h4>
             <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека.</p>
           </div>
           <div class="table__cell">
-            <h3 class='table__heading'>420 миллионов</h3>
+            <h4 class='table__heading'>420 миллионов</h4>
             <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства.</p>
             <p class="table__text">Всемирный Банк, 2017</p>
           </div>
           <div class="table__cell">
-            <h3 class='table__heading'>17 - 20 лет</h3>
+            <h4 class='table__heading'>17 - 20 лет</h4>
             <p class="table__text">Пик обучаемости.</p>
           </div>
           <div class="table__cell">
-            <h3 class='table__heading'>1885 год</h3>
+            <h4 class='table__heading'>1885 год</h4>
             <p class="table__text">Открытие кривой забывания.</p>
           </div>
           <div class="table__cell">
-            <h3 class='table__heading'>1889 год</h3>
-            <p>Открытие условного рефлекса</p>
+            <h4 class='table__heading'>1889 год</h4>
+            <p class="table__text">Открытие условного рефлекса</p>
           </div>
         </div>
       </section>
@@ -92,48 +92,48 @@
         <a class="link feynman__link " href="#">Подробнее</a>
       </section>
       <section class="kaufman">
-        <h2 class="kaufman__section-title_dark">Принципы обучения</h2>
-        <h3 class="Kaufman__section-subtitle_dark">от Джоша Кауфмана</h3>
+        <h2 class="section-title__theme_dark">Принципы обучения</h2>
+        <h3 class="section-subtitle__theme_dark">от Джоша Кауфмана</h3>
         <ul class="table table_theme_dark">
           <li class="table__cell table__cell_theme_dark">
-            <h3 class='table__heading_theme_dark'>1</h3>
-            <p class="table__text_theme_dark">Выберите привлекательный проект.</p>
+            <h4 class="table__heading table__heading_theme_dark">1</h4>
+            <p class="table_text table__text_theme_dark">Выберите привлекательный проект.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h3 class='table__heading_theme_dark'>2</h3>
-            <p class=" table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
+            <h4 class="table_text table__heading_theme_dark">2</h4>
+            <p class="table_text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h3 class='table__heading_theme_dark'>3</h3>
-            <p class="table__text_theme_dark">Определите целевой уровень мастерства.</p>
+            <h4 class="table_text table__heading_theme_dark">3</h4>
+            <p class="table_text table__text_theme_dark">Определите целевой уровень мастерства.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h3 class='table__heading_theme_dark'>4</h3>
-            <p class="table__text_theme_dark">Разбейте навык на элементы.</p>
+            <h4 class="table__heading_theme_dark">4</h4>
+            <p class="table_text table__text_theme_dark">Разбейте навык на элементы.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h3 class='table__heading_theme_dark'>5</h3>
-            <p class="table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
+            <h4 class="table__heading_theme_dark">5</h4>
+            <p class="table_text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h3 class='table__heading_theme_dark'>6</h3>
-            <p class="table__text_theme_dark">Устраните препятствия для занятий.</p>
+            <h4 class="table__heading_theme_dark">6</h4>
+            <p class="table_text table__text_theme_dark">Устраните препятствия для занятий.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h3 class='table__heading_theme_dark'>7</h3>
-            <p class="table__text_theme_dark">Выделите специальное время для занятий.</p>
+            <h4 class="table__heading_theme_dark">7</h4>
+            <p class="table_text table__text_theme_dark">Выделите специальное время для занятий.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h3 class='table__heading_theme_dark'>8</h3>
-            <p class="table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
+            <h4 class="table__heading_theme_dark">8</h4>
+            <p class="table_text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h3 class='table__heading_theme_dark'>9</h3>
-            <p class="table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивным интервалами.</p>
+            <h4 class="table__heading_theme_dark">9</h4>
+            <p class="table_text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивным интервалами.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h3 class='table__heading_theme_dark'>10</h3>
-            <p class="table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
+            <h4 class="table__heading_theme_dark">10</h4>
+            <p class="table_text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </li>
         </ul>
         <div class="kaufman__triangle"></div>
@@ -158,15 +158,15 @@
           <ul class="footer__column-links">
             <li>
               <a href="http://www.facebook.com" target='_blank' class="footer__column-link">
-                <img class="footer__social-icons" src="images/youtube-icon.svg" alt="Ютуб-лого">YouTube</a>
+                <img class="footer__social-icon" src="images/youtube-icon.svg" alt="Ютуб-лого">YouTube</a>
             </li>
             <li>
               <a href="http://www.vk.com" target='_blank' class="footer__column-link">
-                <img class="footer__social-icons" src='images/vk_color_white.svg' alt="ВК-лого">ВКонтакте</a>
+                <img class="footer__social-icon" src='images/vk_color_white.svg' alt="ВК-лого">ВКонтакте</a>
             </li>
             <li>
               <a href="http://www.tiktok.com" target='_blank' class="footer__column-link">
-                <img class="footer__social-icons" src='images/tiktok-icon.svg' alt="ТикТок-лого">TikTok</a>
+                <img class="footer__social-icon" src='images/tiktok-icon.svg' alt="ТикТок-лого">TikTok</a>
             </li>
           </ul>
         </div>
