--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="ru">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,13 +8,12 @@
   <link rel="stylesheet" href="./styles/style.css">
   <title>Научиться учиться</title>
 </head>
-
 <body>
   <div class="page">
     <header class="header">
       <div class="logo logo_place_header"></div>
       <h1 class="header__title">Научиться учиться</h1>
-      <p class="header__subtitle">Какие совеременные и эффективные подходы к обучению вы можете использовать в своей
+      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей
         жизни? 
       <a href="#" class="header__link"> Узнать </a>
       </p>
@@ -92,48 +90,48 @@
         <a class="link feynman__link " href="#">Подробнее</a>
       </section>
       <section class="kaufman">
-        <h2 class="section-title__theme_dark">Принципы обучения</h2>
-        <h3 class="section-subtitle__theme_dark">от Джоша Кауфмана</h3>
+        <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
+        <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
         <ul class="table table_theme_dark">
           <li class="table__cell table__cell_theme_dark">
             <h4 class="table__heading table__heading_theme_dark">1</h4>
-            <p class="table_text table__text_theme_dark">Выберите привлекательный проект.</p>
+            <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h4 class="table_text table__heading_theme_dark">2</h4>
-            <p class="table_text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
+            <h4 class="table__heading table__heading_theme_dark">2</h4>
+            <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h4 class="table_text table__heading_theme_dark">3</h4>
-            <p class="table_text table__text_theme_dark">Определите целевой уровень мастерства.</p>
+            <h4 class="table__heading table__heading_theme_dark">3</h4>
+            <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h4 class="table__heading_theme_dark">4</h4>
-            <p class="table_text table__text_theme_dark">Разбейте навык на элементы.</p>
+            <h4 class="table__heading table__heading_theme_dark">4</h4>
+            <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h4 class="table__heading_theme_dark">5</h4>
-            <p class="table_text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
+            <h4 class="table__heading table__heading_theme_dark">5</h4>
+            <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h4 class="table__heading_theme_dark">6</h4>
-            <p class="table_text table__text_theme_dark">Устраните препятствия для занятий.</p>
+            <h4 class="table__heading table__heading_theme_dark">6</h4>
+            <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h4 class="table__heading_theme_dark">7</h4>
-            <p class="table_text table__text_theme_dark">Выделите специальное время для занятий.</p>
+            <h4 class="table__heading table__heading_theme_dark">7</h4>
+            <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h4 class="table__heading_theme_dark">8</h4>
-            <p class="table_text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
+            <h4 class="table__heading table__heading_theme_dark">8</h4>
+            <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h4 class="table__heading_theme_dark">9</h4>
-            <p class="table_text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивным интервалами.</p>
+            <h4 class="table__heading table__heading_theme_dark">9</h4>
+            <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивным интервалами.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h4 class="table__heading_theme_dark">10</h4>
-            <p class="table_text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
+            <h4 class="table__heading table__heading_theme_dark">10</h4>
+            <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </li>
         </ul>
         <div class="kaufman__triangle"></div>
@@ -174,5 +172,4 @@
     </footer>
   </div>
 </body>
-
 </html>
