--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Марк Казанцев">
-  <link rel="stylesheet" href="./styles/normalize.css">
-  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./vendor/normalize.css">
+  <link rel="stylesheet" href="./pages/index.css">
   <title>Научиться учиться</title>
 </head>
 <body>
-  <div class="page">
+  <div class="root">
     <header class="header">
       <div class="logo logo_place_header"></div>
       <h1 class="header__title">Научиться учиться</h1>
@@ -18,7 +18,7 @@
       <a href="#" class="header__link"> Узнать </a>
       </p>
       <img class="header__main-illustration" src="./images/header-image.png" alt="картина-опять-двойка">
-      <div class="header__square-pic"></div>
+      <div class="header__square-pic rotation"></div>
     </header>
     <main class="content">
       <section class="description">
@@ -43,6 +43,64 @@
             </p>
           </div>
         </div>
+      </section>
+      <section class="techniques">
+        <h2 class="section-title">Техники обучения</h2>
+        <p class="section-subtitle">Пять практик от Барбары Оакли</p>
+        <ul class="cards">
+          <li class="cards__item">
+            <img class="cards__image" src="./images/cards-attention.png">
+            <h3 class="cards__title">Два вида внимания</h3>
+            <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
+          </li>
+          <li class="cards__item">
+            <img class="cards__image" src="./images/cards-recall.png">
+            <h3 class="cards__title">Recall</h3>
+            <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+          </li>
+          <li class="cards__item">
+            <img class="cards__image" src="./images/cards-interliving.png">
+            <h3 class="cards__title">Интерливинг</h3>
+            <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+          </li>
+          <li class="cards__item">
+            <img class="cards__image" src="./images/cards-question.png">
+            <h3 class="cards__title">Вопросы</h3>
+            <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+          </li>
+          <li class="cards__item">
+            <img class="cards__image" src="./images/cards-competence.png">
+            <h3 class="cards__title">Иллюзия компетентности</h3>
+            <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+          </li>
+        </ul>
+      </section>
+      <section class="video">
+        <h2 class="section-title">Видео нa TED</h2>
+        <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
+        <div class="video__iframes">
+          <iframe title="Видео на тему тайм-менеджмента" class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe title="Видео на тему тайм-менеджмента"  class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+      </section>
+      <section class="oakley">
+        <div class="two-columns">
+          <h2 class="two-columns__brief">История Барбары Оакли.</h2>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным 
+                                              гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, 
+                                              чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для 
+                                              продвижения по службе нужно было сдавать математику. И тогда Барбара придумала 
+                                              свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые 
+                                              трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="feynman">
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <p class="feynman__subtitle">Выучить и не забыть.</p>
+        <a class="link feynman__link " href="#">Подробнее</a>
       </section>
       <section class="digits">
         <h2 class="section-title">Цифры и факты</h2>
@@ -84,10 +142,22 @@
           </div>
         </div>
       </section>
-      <section class="feynman">
-        <h2 class="feynman__title">Метод Фейнмана</h2>
-        <p class="feynman__subtitle">Выучить и не забыть.</p>
-        <a class="link feynman__link " href="#">Подробнее</a>
+      <section class="khan">
+        <div class="khan__container">
+          <p class="khan__author">Салман Хан</p>
+          <h3 class="khan__title">Весь мир — школа</h3>
+          <blockquote class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения 
+                                          миллионов студентов по всему миру. Книгу «Весь мир — школа» 
+                                          нужно прочитать всем, кто занимается образованием — так 
+                                          учащиеся повсюду смогут получить навыки и знания, которые 
+                                          приносят успех в школе, карьере и жизни.</blockquote>
+          <h4 class="khan__quote-author">Джордж Лукас</h4>
+          <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+          <div class="khan__book-container">
+            <img class="khan__book-pic" src="./images/khan-book.jpg" alt="Обложка книги 'Весь мир - школа. Преобразованное образование' автора Салмана Хана.">
+            <a class="khan__buy-link" href="https://www.amazon.com/One-World-Schoolhouse-Education-Reimagined/dp/1455508373" target="_blank" rel="noopener">Купить книгу &rarr;</a>
+          </div>
+        </div>
       </section>
       <section class="kaufman">
         <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
@@ -134,7 +204,17 @@
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </li>
         </ul>
-        <div class="kaufman__triangle"></div>
+        <div class="kaufman__triangle rotation"></div>
+      </section>
+      <section class="resources">
+        <h2 class="section-title">Полезные ресурсы</h2>
+        <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+        <ul class="resources__logo-zone">
+          <li><a href="#" target="_blank" rel="noopener"><img class="resources__logo" src="./images/resources-arzamas.svg" alt="Логотип просветительского проекта 'Арзамас', посвященного истории культуры."></a></li>
+          <li><a href="#" target="_blank" rel="noopener"><img class="resources__logo" src="./images/resources-n1.svg" alt="Логотип научно-популярного развлекательного издания о науке и технике 'Н + 1'."></a></li>
+          <li><a href="#" target="_blank" rel="noopener"><img class="resources__logo" src="./images/resources-strelka.svg" alt="Логотип образовательного учреждения 'Стрелка' в области архитектуры, дизайна и медиа."></a></li>
+          <li><a href="#" target="_blank" rel="noopener"><img class="resources__logo" src="./images/resources-polka.svg" alt="Логотип образовательного проекта 'Полка' о произведениях русской литературы."></a></li>
+        </ul>
       </section>
     </main>
     <footer class="footer">
